started pillarSection styling and fixed z-index issue with jumbotron

--- a/client/src/components/HomeComponents/PillarSection/PillarSection.css
+++ b/client/src/components/HomeComponents/PillarSection/PillarSection.css
@@ -1,8 +1,11 @@
 .process-card {
     background: #f9f9f9;
     padding: 2%;
-    box-shadow:0px 10px 20px 5px #c1c1c1;
+    box-shadow:0px 5px 10px 2px rgba(0,0,0,0.2);
     border-radius: 3px;
-    border-top: 5px;
-    border-color: linear-gradient(to right, #ffb40f, #ff3e00);
+    border-top: 10px;
+    border-top-style: solid;
+    border-image: linear-gradient(to right,#ff3e00, #d62562) 10;
+    margin-top: -7em;
 }
+
